--- a/opener.html
+++ b/opener.html
@@ -11,10 +11,10 @@
   
   <div class="container">
     <div class="containerIcons">
-      <a href="index.html">
+      <a href="opener.html">
         <img class="iconTier" src="./img/Pfote-Icon.png">
       </a>
-      <a href="index.html">
+      <a href="opener.html">
         <img class="iconPflanze" src="./img/Blatt-Icon.png">
       </a>
     </div>
