--- a/total.html
+++ b/total.html
@@ -12,7 +12,7 @@
       </a>
     </div>
     <ul id="menu">
-      <li><a href="index.html">home</a></li>
+      <li><a href="opener.html">home</a></li>
       <li id="active"><a href="#">total</a></li>
       <li><a href="subtotal.html">subtotal</a></li>
       <li><a href="dyk.html">dyk</a></li>
