--- a/dyk.html
+++ b/dyk.html
@@ -13,7 +13,7 @@
       </a>
     </div>
     <ul id="menu">
-      <li><a href="index.html">home</a></li>
+      <li><a href="opener.html">home</a></li>
       <li><a href="total.html">total</a></li>
       <li><a href="subtotal.html">subtotal</a></li>
       <li id="active"><a href="#">dyk</a></li>
