--- a/fische.html
+++ b/fische.html
@@ -12,7 +12,7 @@
       </a>
     </div>
     <ul id="menu">
-      <li><a href="index.html">home</a></li>
+      <li><a href="opener.html">home</a></li>
       <li><a href="total.html">total</a></li>
       <li id="active"><a href="#">subtotal</a></li>
       <li><a href="dyk.html">dyk</a></li>
