replace opener with index

--- a/dyk.html
+++ b/dyk.html
@@ -8,7 +8,7 @@
 
   <nav id="navigation">
     <div id="icon">
-      <a href="opener.html">
+      <a href="index.html">
       <img src="./img/logo.png">
       </a>
     </div>
