--- a/total.html
+++ b/total.html
@@ -7,7 +7,7 @@
 <body>
   <nav id="navigation">
     <div id="icon">
-      <a href="opener.html">
+      <a href="index.html">
       <img src="./img/logo.png">
       </a>
     </div>
