--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Gefährdete Lebewesen</title>
-  <link rel="stylesheet" type="text/css" href="./css/opener.css">
+  <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <script src="./js/opener.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
