--- a/opener.html
+++ b/opener.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Gefährdete Tierarten</title>
-  <link rel="stylesheet" type="text/css" href="./css/index.css">
+  <link rel="stylesheet" type="text/css" href="./css/opener.css">
 </head>
 <body>
 
@@ -35,7 +35,7 @@
       <p class="line4">SIND VOM AUSSTERBEN BEDROHT</p>
     </div>
   </div>
-  <script src="./js/index.js"></script>
+  <script src="./js/opener.js"></script>
 </body>
 
 </html>
